--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -17,8 +17,11 @@ button {
 }
 img {
   display: block;
+  // ширина картинки не буде більшою за контейнер
   max-width: 100%;
   height: auto;
+  //ширина картинки 100% контейнера
+  width: 100%;
 }
 
 a {
