--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -1,7 +1,8 @@
 .section-title {
   margin-bottom: 50px;
 
-  @include font(36px, 1.17, null, null);
+  // @include font(36px, 1.17, null, null);
+  @include font(28px, 1.17, null, null);
   text-align: center;
 
   color: var(--title-color);
