--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,10 +1,19 @@
 .benefits__list {
-  display: flex;
+ display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .benefits__item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .benefits__icon {
@@ -20,6 +29,7 @@
   margin-bottom: 10px;
   @include font(14px, 1.14, null, null);
   text-transform: uppercase;
+  text-align: center;
 
   color: var(--title-color);
 }
