--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,11 +6,22 @@
 }
 
 .footer__container {
-  display: flex;
-  align-items: baseline;
+  text-align: center;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-around;
+  }
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+    justify-content: space-between;
+  }
 }
-.contact-wrap {
-  margin-right: 70px;
+.contact-wrap,
+.socials-wrap {
+  margin-bottom: 60px;
 }
 
 .footer__logo {
@@ -19,9 +30,11 @@
 
   color: var(--white-color);
 }
+
 .address {
   @include font(null, 1.71, 400, null);
 }
+
 .address__item {
   margin-bottom: 9px;
 }
@@ -52,17 +65,18 @@
   margin-bottom: 20px;
 }
 
-.subscribe {
-  margin-left: auto;
-}
-
 .subscription {
-  @extend %flex-centered;
-  gap: 12px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  @media screen and (min-width: 1200px) {
+    gap: 12px;
+  }
 }
 
 .subscription__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
 
@@ -77,6 +91,10 @@
   &::placeholder {
     @include font(16px, null, null, 0.03em);
     color: var(--opacity-white-color);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
   }
 }
 
