--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,15 +1,17 @@
 .filter {
- @extend %flex-centered;
+  // @extend %flex-centered;
+  display: flex;
+  // align-items: center;
+
   margin-bottom: 50px;
   gap: 8px;
 }
 .filter__btn {
   display: block;
   padding: 6px 22px;
-  
+
   @include font(16px, 1.62, 500, 0.03em);
   text-align: center;
-  
 
   color: var(--title-color);
   background-color: var(--secondary-bgr);
@@ -18,15 +20,22 @@
   border-radius: 4px;
   border: none;
 
-  transition: background-color var(--timing-function), color var(--timing-function), box-shadow var(--timing-function);
+  transition: background-color var(--timing-function), color var(--timing-function),
+    box-shadow var(--timing-function);
 
   &:hover,
   &:focus {
     background-color: var(--accent-color);
     color: var(--white-color);
 
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+}
+
+.filter__btn--active {
+  background-color: var(--accent-color);
+  color: var(--white-color);
 }
 
 /*--------------------- Проекти-------------------- */
@@ -37,7 +46,10 @@
 }
 
 .projects__item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
 }
 .projects__link {
   display: block;
@@ -47,7 +59,8 @@
 
   &:hover,
   &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
 
@@ -81,7 +94,7 @@
 
 .projects__title {
   margin-bottom: 4px;
-  
+
   @include font(18px, 2, null, 0.06em);
   color: var(--title-color);
 }
