--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,19 +1,41 @@
 .header {
   border-bottom: 1px solid var(--header-border-color);
+  @media screen and (max-width: 767px) {
+    padding-top: 10px;
+    padding-bottom: 9px;
+  }
 }
 .header__container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
+
 .header__logo {
   color: var(--black-color);
 }
+.nav__btn {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
 .menu {
   display: none;
-  gap: 50px;
-  margin-left: 93px;
-
-  @include font(null, 1.14, 500, 0.02em);
+  @media screen and (min-width: 768px) {
+    display: flex;
+    gap: 50px;
+    margin-left: 87px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 .menu__item {
   position: relative;
@@ -24,6 +46,7 @@
   padding-top: 32px;
   padding-bottom: 32px;
 
+  @include font(null, 1.14, 500, 0.02em);
   color: var(--title-color);
   outline: transparent;
 
@@ -55,20 +78,22 @@
 
 .contact {
   display: none;
-  gap: 50px;
-  margin-left: auto;
-
-  @include font(null, 1.14, 500, 0.02em);
-  color: currentColor;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    gap: 30px;
+  }
 }
 
 .contact__link {
   display: flex;
   align-items: center;
   gap: 10px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
+  @include font(12px, 1.14, 500, 0.02em);
   color: currentColor;
   outline: transparent;
 
@@ -77,6 +102,10 @@
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
   }
 }
 .contact__icon {
