--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,22 +1,31 @@
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
-  max-width: 1600px;
-  height: 600px;
+  padding-top: 118px;
+  padding-bottom: 118px;
+  max-width: 100%;
+  height: auto;
   margin: 0 auto;
-
   background-color: var(--hero-footer-bgr);
-  background-image: linear-gradient(var(--gradient-hero-bgr), var(--gradient-hero-bgr)),
-    url(../images/hero.jpg);
-
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  @media screen and (min-width: 480px) {
+    background-image: linear-gradient(var(--gradient-hero-bgr), var(--gradient-hero-bgr)),
+      url(../images/hero-mobile.jpg);
+  }
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(var(--gradient-hero-bgr), var(--gradient-hero-bgr)),
+      url(../images/hero-tablet.jpg);
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(var(--gradient-hero-bgr), var(--gradient-hero-bgr)),
+      url(../images/hero.jpg);
+  }
 }
 
 .hero__title {
   display: block;
-  max-width: 696px;
+  // max-width: 696px;
   margin: 0 auto;
   margin-bottom: 30px;
 
@@ -29,12 +38,7 @@
     max-width: 360px;
   }
   @media screen and (min-width: 1200px) {
-
-    // @include font(44px, 1.36, 900, 0.06em);
-    font-size: 44px;
-    line-height: 1.36;
-    font-weight: 900;
-    letter-spacing: 0.06em;
+    @include font(44px, 1.36, 900, 0.06em);
     max-width: 696px;
   }
 }
