--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -14,12 +14,17 @@
 .header__logo {
   color: var(--black-color);
 }
-.nav__btn {
+.burger-btn {
   width: 40px;
   height: 40px;
   padding: 0;
   background-color: transparent;
   border: none;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -110,4 +115,113 @@
 }
 .contact__icon {
   fill: currentColor;
+}
+
+.mobile-nav__wrap-top {
+  margin-bottom: 64px;
+}
+
+.mobile-nav {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 15px 48px 40px;
+
+  background-color: var(--primary-bgr);
+}
+.mobile-nav__btn {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
+}
+
+.mobile-menu {
+  display: block;
+}
+.mobile-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.78;
+  letter-spacing: 0.02em;
+
+  color: #212121;
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    outline: transparent;
+  }
+}
+
+.mobile-contact {
+  margin-bottom: 64px;
+}
+.mobile-contact__item {
+  display: block;
+}
+
+.mobile-contact__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-contact__tel {
+  @include font(34px, 1.78, 500, 0.02em);
+  color: #2196f3;
+
+  @media screen and (max-width: 479px) {
+    @include font(26px, 1.78, 500, 0.02em);
+  }
+}
+
+.mobile-contact__address {
+  @include font(24px, 1.17, 500, 0.02em);
+  color: currentColor;
+}
+
+.mobile-socials {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.mobile-socials__item {
+  position: relative;
+}
+.mobile-socials__item:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: -10px;
+
+  width: 1px;
+  height: 100%;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+.mobile-socials__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
 }
