--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
   background-color: var(--backdrop-bgr-color);
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.075, 0.82, 0.165, 1), visibility 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
