--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -21,7 +21,9 @@
 }
 .contact-wrap,
 .socials-wrap {
-  margin-bottom: 60px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
 }
 
 .footer__logo {
