--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,5 +1,5 @@
 .benefits__list {
- display: flex;
+  display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
@@ -29,10 +29,14 @@
   margin-bottom: 10px;
   @include font(14px, 1.14, null, null);
   text-transform: uppercase;
-  text-align: center;
 
   color: var(--title-color);
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
+
 .benefits__txt {
   line-height: 1.71;
 }
